@@ -3,7 +3,6 @@
   <requires lib="gtk+" version="2.16"/>
   <!-- interface-naming-policy toplevel-contextual -->
   <object class="GtkAdjustment" id="adjustment1">
-    <property name="lower">0</property>
     <property name="upper">10</property>
     <property name="value">2</property>
     <property name="step_increment">1</property>
@@ -29,11 +28,6 @@
     <property name="upper">20</property>
     <property name="value">10</property>
     <property name="step_increment">1</property>
-  </object>
-  <object class="GtkAdjustment" id="adjustment7">
-    <property name="lower">1</property>
-    <property name="step_increment">1</property>
-    <property name="page_increment">1</property>
   </object>
   <object class="GtkListStore" id="liststore1">
     <columns>
@@ -83,6 +77,20 @@
       </row>
       <row>
         <col id="0" translatable="yes">All</col>
+      </row>
+    </data>
+  </object>
+  <object class="GtkListStore" id="liststore4">
+    <columns>
+      <!-- column-name mon -->
+      <column type="gchararray"/>
+    </columns>
+    <data>
+      <row>
+        <col id="0" translatable="yes">All</col>
+      </row>
+      <row>
+        <col id="0">1</col>
       </row>
     </data>
   </object>
@@ -395,23 +403,15 @@
                                         <property name="visible">True</property>
                                         <property name="can_focus">False</property>
                                         <property name="yalign">0.10000000149011612</property>
-                                        <property name="xscale">0.80000001192092896</property>
+                                        <property name="xscale">0.85</property>
                                         <property name="yscale">0</property>
                                         <property name="left_padding">12</property>
                                         <property name="right_padding">12</property>
                                         <child>
-                                          <object class="GtkSpinButton" id="monitor">
+                                          <object class="GtkComboBox" id="monitor">
                                             <property name="visible">True</property>
-                                            <property name="can_focus">True</property>
-                                            <property name="invisible_char">•</property>
-                                            <property name="width_chars">6</property>
-                                            <property name="invisible_char_set">True</property>
-                                            <property name="primary_icon_activatable">False</property>
-                                            <property name="secondary_icon_activatable">False</property>
-                                            <property name="primary_icon_sensitive">True</property>
-                                            <property name="secondary_icon_sensitive">True</property>
-                                            <property name="adjustment">adjustment7</property>
-                                            <property name="climb_rate">1</property>
+                                            <property name="can_focus">False</property>
+                                            <property name="model">liststore4</property>
                                           </object>
                                         </child>
                                       </object>
@@ -1231,7 +1231,7 @@
                                 <child>
                                   <object class="GtkComboBox" id="fm_combobox">
                                     <property name="visible">True</property>
-                                    <property name="can_focus">True</property>
+                                    <property name="can_focus">False</property>
                                   </object>
                                   <packing>
                                     <property name="expand">True</property>
