@@ -5,6 +5,8 @@
 * Added CONF_TYPE_EXTERNAL support for lxpanel_generic_config_dlg().
 * Implemented property "aspect-width" for PanelIconGrid to allow using
     non-square tray sockets.
+* Added support for monitors "All" to span panel over all monitors (i.e.
+    to allow pre-0.6.0 behavior).
 
 0.7.2
 -------------------------------------------------------------------------
